MODAUD-264: Respect tenant timezone when showing Loan dates in Log Record description field (#222)